# TrailAssist

./: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Emscripten.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/TrailAssist/: sample_library.hpp
src/: CMakeLists.txt  main.cpp  trail_calculator.cpp  trail_calculator.h
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  file_100.txt  file_10000.txt  generate_files.py  input_standard_v2.txt  input_wrong_float.txt  input_wrong_missmatch.txt  input_wrong_string.txt  tests.cpp
